--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "firebase": "^12.3.0",
     "lucide-react": "^0.542.0",
     "motion": "^12.23.12",
-    "next": "15.3.5",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "next": "^15.5.5",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-multi-carousel": "^2.8.6",
