--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-multi-carousel": "^2.8.6",
     "react-redux": "^9.2.0",
     "recharts": "^3.1.2",
+    "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
