--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@mui/styled-engine-sc": "^7.2.0",
     "@reduxjs/toolkit": "^2.9.0",
     "axios": "^1.12.2",
+    "chart.js": "^4.5.1",
     "firebase": "^12.3.0",
     "lucide-react": "^0.542.0",
     "motion": "^12.23.12",
     "next": "^16.0.7",
     "react": "^19.2.1",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.1",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
