--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^7.2.0",
     "@mui/styled-engine-sc": "^7.2.0",
     "@reduxjs/toolkit": "^2.9.0",
+    "antd": "^6.1.3",
     "axios": "^1.12.2",
     "firebase": "^12.3.0",
     "lucide-react": "^0.542.0",
