--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-multi-carousel": "^2.8.6",
+    "react-player": "^3.4.0",
     "react-redux": "^9.2.0",
     "recharts": "^3.1.2",
     "socket.io-client": "^4.8.1",
