added excel file package to dwonlod product data

--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-redux": "^9.2.0",
     "recharts": "^3.1.2",
     "socket.io-client": "^4.8.1",
-    "styled-components": "^6.1.19"
+    "styled-components": "^6.1.19",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
