--- a/package.json
+++ b/package.json
@@ -14,19 +14,20 @@
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
     "@mui/styled-engine-sc": "^7.2.0",
+    "@next/third-parties": "^16.1.6",
     "@reduxjs/toolkit": "^2.9.0",
     "axios": "^1.12.2",
     "chart.js": "^4.5.1",
     "firebase": "^12.3.0",
     "lucide-react": "^0.542.0",
     "motion": "^12.23.12",
-    "next": "^16.0.7",
+    "next": "^16.1.6",
     "react": "^19.2.1",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.1",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
-    "react-multi-carousel": "^2.8.6",
+    "react-multi-carousel": "^2.8.5",
     "react-player": "^3.4.0",
     "react-redux": "^9.2.0",
     "recharts": "^3.1.2",
